# DirectXer

./: .gitignore  .projectile  CMakeLists.txt  DirectXer.sln  LICENSE  README.org
DXError/: DXError.vcxproj  DXError.vcxproj.filters
DXError/Debug/: DXError.idb  DXError.vcxproj.FileListAbsolute.txt
DXError/Debug/DXError.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  DXError.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
DXError/src/: dxerr.h
DirectXer/: Core.vcxitems  Core.vcxitems.filters  DirectXer.vcxproj  DirectXer.vcxproj.filters  ExampleScenes.args.json  Main.cpp  PixelShader.cso  PlatformWin32.vcxitems  Playground.vcxproj  ShadersD3D11.vcxitems  ShadersD3D11.vcxitems.filters  SpaceGame.args.json  SpaceGame.vcxproj  SpaceGame.vcxproj.filters  VertexShader.cso  WinMain.vcxitems.vcxitems
DirectXer/Debug/: DirectXer.exe.recipe  graphics.obj.enc  vc142.idb
DirectXer/Debug/DirectXer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  fxc.command.1.tlog  fxc.read.1.tlog  fxc.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
DirectXer/ResorceHeaders/: SpaceAssets.hpp
DirectXer/Shaders/: 2DPixelShader.hlsl  2DVertexShader.hlsl  3DPixelShader.hlsl  3DVertexShader.hlsl  MTLCommon.ihlsl  MTLInstancedVertexShader.hlsl  MTLPixelShader.hlsl  MTLVertexShader.hlsl  PhongPixelShader.hlsl  PhongVertexShader.hlsl  PixelShader.hlsl  QuadPixelShader.hlsl  QuadVertexShader.hlsl  TexPixelShader.hlsl  VertexShader.hlsl
DirectXer/src/: 2DRendering.cpp  2DRendering.hpp  3DRendering.cpp  3DRendering.hpp  App.cpp  App.h  App.hpp  Assets.cpp  Assets.hpp  Audio.cpp  Audio.hpp  BVH.cpp  BVH.hpp  BaseException.cpp  BaseException.h  Camera.cpp  Camera.hpp  Config.hpp  Containers.hpp  Debug.hpp  DxgiInfoManager.cpp  DxgiInfoManager.h  DxgiInfoManager.hpp  FileUtils.hpp  FontLibrary.cpp  FontLibrary.hpp  GameDefinition.cpp  GameDefinition.hpp  Geometry.hpp  GeometryDebug.hpp  GeometryUtils.cpp  GeometryUtils.hpp  Glm.hpp  Graphics.cpp  Graphics.h  Graphics.hpp  GraphicsCommon.h  GraphicsCommon.hpp  GraphicsContainers.hpp  GraphicsException.cpp  (+41 more)
DirectXer/src/Games/: ExampleScenes.cpp  ExampleScenes.hpp  SpaceGame.cpp  SpaceGame.hpp
DirectXer/src/PlatformLinux/: GraphicsOpenGL.cpp  GraphicsOpenGL.hpp  IncludeLinux.hpp  LinuxMain.cpp  PlatformLinux.cpp  PlatformLinux.hpp
DirectXer/src/PlatformWindows/: GraphicsD3D11.cpp  GraphicsD3D11.hpp  IncludeWin.hpp  PlatformWindows.cpp  PlatformWindows.hpp  ShaderRecompilation.hpp  WinMain.cpp  WindowsMessageMap.cpp  WindowsMessageMap.hpp
Fmt/: Fmt.vcxproj  Fmt.vcxproj.filters
Fmt/Debug/: Fmt.idb  Fmt.vcxproj.FileListAbsolute.txt
Fmt/Debug/Fmt.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Fmt/include/fmt/: core.h
Fmt/x64/Debug/: Fmt.idb  Fmt.vcxproj.FileListAbsolute.txt
Fmt/x64/Debug/Fmt.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Fmt.lastbuildstate  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
Freetype/: freetype.vcxproj
ImGui/: ImGui.vcxproj
Stb/: Stb.vcxproj  Stb.vcxproj.filters
Stb/src/: stb.cpp
Tools/: mesh_builder.py
Tools/AssetBuilder/: AssetBuilder.args.json  AssetBuilder.cpp  AssetBuilder.hpp  AssetBuilder.vcxproj  AssetBuilder.vcxproj.filters  AssetLoaders.cpp
Tools/AssetBuilder/src/: AssetBuilder.cpp  AssetBuilder.hpp  AssetBuilderStbi.cpp  AssetLoaders.cpp
Tools/AtlasViewer/: AtlasViewer.args.json  AtlasViewer.cpp  AtlasViewer.hpp  AtlasViewer.vcxproj  AtlasViewer.vcxproj.filters  DummyTexture.hpp  Resource.aps
Tools/AtlasViewer/src/: AtlasViewer.cpp  AtlasViewer.hpp
Tools/BVHVisualizer/: BVHVisualizer.vcxproj  BVHVisualizer.vcxproj.filters
Tools/BVHVisualizer/src/: BVHVisualizer.cpp  BVHVisualizer.hpp  BVHVisualizerApplication.cpp
Tools/MaterialEditor/: MaterialEditor.args.json  MaterialEditor.vcxproj  MaterialEditor.vcxproj.filters
Tools/MaterialEditor/src/: Editor.cpp  Editor.hpp  MaterialEditor.cpp  MaterialEditor.hpp  MaterialEditorApplication.cpp  MaterialEditorSerialization.cpp  Utils.cpp  Utils.hpp
Tools/TexturePacker/: TexturePacker.args.json  TexturePacker.cpp  TexturePacker.hpp  TexturePacker.vcxproj  TexturePacker.vcxproj.filters  TexturePackerStbi.cpp
Tools/TexturePacker/src/: TexturePacker.cpp  TexturePacker.hpp
